<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="200dp"
        android:id="@+id/imgV_Logo_profile"
        android:src="@drawable/ic_menu_camera"
        android:layout_weight=".3"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="0dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/et_Email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_Email_profile"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/et_firstName"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_FirstName_profile"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:hint="@string/et_LastName"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_LastName_profile"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/et_Pwd"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_PWD_profile"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
      android:layout_weight=".1"
        android:text="@string/btn_save"
        android:id="@+id/btn_Save_prof"
        />

</LinearLayout>