<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:paddingLeft="5pt"

    android:visibility="visible">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:id="@+id/imgV_Logo"

        android:layout_weight="2.5"
        android:layout_margin="15pt"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_FirstName"
            android:layout_weight="1"
            android:hint="@string/et_firstName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_LastName"
            android:layout_weight="1"
            android:hint="@string/et_LastName"
            android:textColorHint="@color/colorPrimaryDark"
            android:singleLine="false"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_weight="1"
        android:id="@+id/et_Email" android:hint="@string/et_Email"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_weight="1"
        android:visibility="visible"
        android:hint="@string/et_Pwd"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_register_PWD"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_weight="1"
        android:visibility="visible"
        android:hint="@string/et_RePwd"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_REPWD"/>


    <LinearLayout
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/llv1">
        <Button
            android:text="@string/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3pt"
            android:id="@+id/btn_register_register"
            android:layout_weight="5"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"/>
        <Button
            android:text="@string/btn_Cancel"
            android:layout_margin="3pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register_cancel"
            android:layout_weight="5"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>