<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    android:padding="50dp"
    tools:context=".AdminPropertyActivity">


    <Spinner
        android:id="@+id/sp_Product_name_property"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".1"
        android:spinnerMode="dropdown"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/et_property_name"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_property_name_property"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/et_property_value"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_property_value_property"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/btn_save"
        android:id="@+id/btn_Save_property"
        />

</LinearLayout>