<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="50dp"
    tools:context=".AdminProductActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:id="@+id/imgV_Logo_product"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"
        app:civ_border_width="7dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_overlay="true"

        android:visibility="gone"

        />

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:id="@+id/getImg_product"
        android:background="@drawable/ic_menu_camera"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"
        android:visibility="visible"

        />
    <Spinner
        android:id="@+id/sp_Brand_name_product"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".1"
        android:spinnerMode="dropdown"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/et_prod_name"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_prod_name_prod"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/et_prod_price"
        android:layout_gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:id="@+id/et_prodPrice_prod"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/btn_save"
        android:id="@+id/btn_Save_product"
        />

</LinearLayout>